# pytg

./: .gitignore  LICENSE.txt  README.md  environment.yml  pyproject.toml  setup.py
docs/: Nash_data.txt  solve.py
pytg/: TG.py
src/pytg/: TG.py  finite_difference.py  solvers.py
tests/: test_finite_difference.py  test_solvers.py
