[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytg"
version = "0.1.0"
description = "Numerical solver for the viscous Taylor-Goldstein equation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "findiff>=0.12.1",
    "numpy>=2.2.1",
    "scipy>=1.15.0",
    "sympy>=1.13.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "pytest>=8.3.4",
    "ruff>=0.9.0",
]

[tool.uv.sources]
pytg = { workspace = true }

[tool.uv.workspace]
members = ["./"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::Warning"]